[package]
name = "hackernews_tui"
version = "0.13.4"
authors = ["Thang Pham <phamducthang1234@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Terminal UI to browse Hacker News"
repository = "https://github.com/aome510/hackernews-TUI"
keywords = ["hackernews", "tui"]
readme = "../README.md"
include = ["src/**/*", "LICENSE", "../README.*", "!**/examples/**/*"]

[dependencies]

# cursive related deps
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"] }
cursive_core = "0.3.7"
cursive-async-view = "0.6.0"
cursive_buffered_backend = "0.6.1"
cursive-aligned-view = "0.6.0"

# html5ever related deps
html5ever = "0.26.0"
markup5ever = "0.11.0"
tendril = "0.4.3"

# internal article view dep
readable-readability = "0.4.0"

# tracing/log related deps
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.20"

# serde related deps
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

# others
ureq = { version = "2.9.1", features = ["json", "cookies"] }
anyhow = "1.0.79"
rayon = "1.8.1"
regex = "1.10.3"
once_cell = "1.19.0"
toml = "0.8.10"
clap = { version = "4.5.0", features = ["string"] }
dirs-next = "2.0.0"
url = "2.5.0"
config_parser2 = { version = "0.1.5", path = "../config_parser" }
crossbeam-channel = "0.5.11"
unicode-width = "0.1.11"
comfy-table = "7.1.0"
html-escape = "0.2.13"
